# codeinsight

./: LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
codeinsight/: cli.py  summarizer.py
codeinsight/interfaces/: summarizer.py
codeinsight/summarizers/: file_list.py
tests/: test_codeinsight_cli.py  test_file_list_summarizer.py  test_langchain_setup.py  test_llamacpp_setup.py
