[tool.poetry]
name = "codeinsight"
version = "0.1.0"
description = "CodeInsight - Python Code Summarization for VS Code"
authors = ["Sajo Mathews <sajomathews@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.292"
llama-cpp-python = "^0.2.6"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
codeinsight = "codeinsight.cli:app"